// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Component: stories > Api stories > Story Block 1`] = `
"<div>
  <div contenteditable="true">
    <div>
      <div contenteditable="false">
        <button type="button" draggable="false" aria-label="Block options">
          <span></span>
        </button>
      </div>
      <span contenteditable="false">
        <mark>a</mark>
      </span>
    </div>
    <div>
      <div contenteditable="false">
        <button type="button" draggable="false" aria-label="Block options">
          <span></span>
        </button>
      </div>
      <span contenteditable="false">
        <mark>b</mark>
      </span>
    </div>
  </div>
  <div>
    <button type="button">insert at caret</button>
    <button type="button">edit meta</button>
    <button type="button">clear meta</button>
    <button type="button">remove mark</button>
    <button type="button">replace span</button>
    <button type="button">replace across</button>
    <button type="button">set value</button>
    <button type="button">clear value</button>
    <button type="button">insert between rows</button>
  </div>
  <output aria-label="value">@[a](x)@[b](y)</output>
</div>"
`;

exports[`Component: stories > Api stories > Story Default 1`] = `
"<div>
  <div contenteditable="true">
    <span>hello </span>
    <span contenteditable="false">
      <mark>world</mark>
    </span>
    <span> foo</span>
  </div>
  <div>
    <button type="button">insert at caret</button>
    <button type="button">edit meta</button>
    <button type="button">clear meta</button>
    <button type="button">remove mark</button>
    <button type="button">replace span</button>
    <button type="button">replace across</button>
    <button type="button">set value</button>
    <button type="button">clear value</button>
    <button type="button">insert between rows</button>
  </div>
  <output aria-label="value">hello @[world](u1) foo</output>
</div>"
`;

exports[`Component: stories > Base stories > Story Autocomplete 1`] = `
"<div contenteditable="true">
  <span>Hello, clickable marked @world!</span>
</div>"
`;

exports[`Component: stories > Base stories > Story Configured 1`] = `
"<div>
  <div>
    <div contenteditable="true">
      <span>Enter the '@' for calling </span>
      <span contenteditable="false">
        <button type="button">primary</button>
      </span>
      <span> suggestions and '/' for </span>
      <span contenteditable="false">
        <button type="button">default</button>
      </span>
      <span>!&#10;Mark is can be a any component with any logic. In this example it is the </span>
      <span contenteditable="false">
        <button type="button">Button</button>
      </span>
      <span>: clickable primary or secondary.&#10;For found mark used </span>
      <span contenteditable="false">
        <button type="button">annotations</button>
      </span>
      <span>.</span>
    </div>
  </div>
  <div>
    <button>Copy</button>
    <div>
      <pre data-value="Enter the '@' for calling @[primary](primary:4) suggestions and '/' for @[default](default:7)!&#10;Mark is can be a any component with any logic. In this example it is the @[Button](primary:54): clickable primary or secondary.&#10;For found mark used @[annotations](default:123).">Enter the '@' for calling @[primary](primary:4) suggestions and '/' for @[default](default:7)!&#10;Mark is can be a any component with any logic. In this example it is the @[Button](primary:54): clickable primary or secondary.&#10;For found mark used @[annotations](default:123).</pre>
    </div>
    <div>
      <span>Plain text</span>
      <span>37 words · 271 chars · 3 lines</span>
    </div>
  </div>
</div>"
`;

exports[`Component: stories > Base stories > Story Default 1`] = `
"<div contenteditable="true">
  <span>Hello, clickable marked </span>
  <span contenteditable="false">
    <mark>world</mark>
  </span>
  <span>!</span>
</div>"
`;

exports[`Component: stories > Clipboard stories > Story Drag 1`] = `
"<div contenteditable="true">
  <div>
    <div contenteditable="false">
      <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
        <span></span>
      </button>
    </div>
    <span>hello&#10;</span>
  </div>
  <div>
    <div contenteditable="false">
      <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
        <span></span>
      </button>
    </div>
    <span contenteditable="false">
      <mark>world</mark>
    </span>
  </div>
  <div>
    <div contenteditable="false">
      <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
        <span></span>
      </button>
    </div>
    <span>&#10;foo</span>
  </div>
</div>"
`;

exports[`Component: stories > Clipboard stories > Story Inline 1`] = `
"<div contenteditable="true">
  <span>hello </span>
  <span contenteditable="false">
    <mark>world</mark>
  </span>
  <span> foo</span>
</div>"
`;

exports[`Component: stories > Clipboard stories > Story NestedMarkStory 1`] = `
"<div contenteditable="true">
  <span>hello </span>
  <span contenteditable="false">
    <mark>
      <strong>wor</strong>
      <em>ld</em>
    </mark>
  </span>
  <span> foo</span>
</div>"
`;

exports[`Component: stories > Clipboard stories > Story PlainText 1`] = `
"<div contenteditable="true">
  <span>abc</span>
</div>"
`;

exports[`Component: stories > Drag stories > Story Markdown 1`] = `
"<div contenteditable="true">
  <div>
    <div contenteditable="false">
      <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
        <span></span>
      </button>
    </div>
    <span>
      <span>
        <span>
          <span>Welcome to </span>
          <span>
            <span>
              <span>
                <span>Marked Input</span>
              </span>
            </span>
          </span>
          <span></span>
        </span>
      </span>
    </span>
  </div>
  <div>
    <div contenteditable="false">
      <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
        <span></span>
      </button>
    </div>
    <span>A powerful library for parsing rich text with markdown formatting.&#10;&#10;</span>
  </div>
  <div>
    <div contenteditable="false">
      <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
        <span></span>
      </button>
    </div>
    <span>
      <span>
        <span>
          <span>Features</span>
        </span>
      </span>
    </span>
  </div>
  <div>
    <div contenteditable="false">
      <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
        <span></span>
      </button>
    </div>
    <span>
      <span>
        <span>
          <span></span>
          <span>
            <span>
              <span>
                <span>Bold</span>
              </span>
            </span>
          </span>
          <span> and </span>
          <span>
            <span>
              <span>
                <span>italic</span>
              </span>
            </span>
          </span>
          <span> text support</span>
        </span>
      </span>
    </span>
  </div>
  <div>
    <div contenteditable="false">
      <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
        <span></span>
      </button>
    </div>
    <span>
      <span>
        <span>
          <span></span>
          <span contenteditable="false">
            <span>Code snippets</span>
          </span>
          <span> and </span>
          <span contenteditable="false">
            <span>code blocks</span>
          </span>
          <span></span>
        </span>
      </span>
    </span>
  </div>
  <div>
    <div contenteditable="false">
      <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
        <span></span>
      </button>
    </div>
    <span>
      <span>
        <span>
          <span></span>
          <span contenteditable="false">
            <span>Strikethrough</span>
          </span>
          <span> for deleted content</span>
        </span>
      </span>
    </span>
  </div>
  <div>
    <div contenteditable="false">
      <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
        <span></span>
      </button>
    </div>
    <span>
      <span>
        <span>
          <span>Links like </span>
          <span contenteditable="false">
            <span>GitHub</span>
          </span>
          <span></span>
        </span>
      </span>
    </span>
  </div>
  <div>
    <div contenteditable="false">
      <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
        <span></span>
      </button>
    </div>
    <span>
      <span>
        <span>
          <span>Example</span>
        </span>
      </span>
    </span>
  </div>
  <div>
    <div contenteditable="false">
      <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
        <span></span>
      </button>
    </div>
    <span contenteditable="false">
      <span>const parser = new ParserV2(['**__value__**', '*__value__*'])&#10;const result = parser.parse('Hello **world**!')&#10;</span>
    </span>
  </div>
  <div>
    <div contenteditable="false">
      <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
        <span></span>
      </button>
    </div>
    <span>&#10;&#10;Visit our docs for more details.</span>
  </div>
</div>"
`;

exports[`Component: stories > Drag stories > Story MarkdownDrag 1`] = `
"<div contenteditable="true">
  <div>
    <div contenteditable="false">
      <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
        <span></span>
      </button>
    </div>
    <span>
      <span>
        <span>
          <span>Welcome to Draggable Blocks</span>
        </span>
      </span>
    </span>
  </div>
  <div>
    <div contenteditable="false">
      <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
        <span></span>
      </button>
    </div>
    <span>This is the first paragraph.&#10;&#10;This is the second paragraph.&#10;&#10;</span>
  </div>
  <div>
    <div contenteditable="false">
      <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
        <span></span>
      </button>
    </div>
    <span>
      <span>
        <span>
          <span>Features</span>
        </span>
      </span>
    </span>
  </div>
  <div>
    <div contenteditable="false">
      <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
        <span></span>
      </button>
    </div>
    <span>
      <span>
        <span>
          <span>Drag handles appear on hover</span>
        </span>
      </span>
    </span>
  </div>
</div>"
`;

exports[`Component: stories > Drag stories > Story PlainTextDrag 1`] = `
"<div contenteditable="true">
  <div>
    <div contenteditable="false">
      <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
        <span></span>
      </button>
    </div>
    <span>
      <span>
        <span>
          <span>First block of plain text</span>
        </span>
      </span>
    </span>
  </div>
  <div>
    <div contenteditable="false">
      <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
        <span></span>
      </button>
    </div>
    <span>
      <span>
        <span>
          <span>Second block of plain text</span>
        </span>
      </span>
    </span>
  </div>
  <div>
    <div contenteditable="false">
      <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
        <span></span>
      </button>
    </div>
    <span>
      <span>
        <span>
          <span>Third block of plain text</span>
        </span>
      </span>
    </span>
  </div>
  <div>
    <div contenteditable="false">
      <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
        <span></span>
      </button>
    </div>
    <span>
      <span>
        <span>
          <span>Fourth block of plain text</span>
        </span>
      </span>
    </span>
  </div>
  <div>
    <div contenteditable="false">
      <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
        <span></span>
      </button>
    </div>
    <span>
      <span>
        <span>
          <span>Fifth block of plain text</span>
        </span>
      </span>
    </span>
  </div>
</div>"
`;

exports[`Component: stories > Drag stories > Story ReadOnlyDrag 1`] = `
"<div contenteditable="false">
  <div>
    <span>
      <span>
        <span>
          <span>Read-Only Content</span>
        </span>
      </span>
    </span>
  </div>
  <div>
    <span>
      <span>
        <span>
          <span>Section A</span>
        </span>
      </span>
    </span>
  </div>
  <div>
    <span>
      <span>
        <span>
          <span>Section B</span>
        </span>
      </span>
    </span>
  </div>
</div>"
`;

exports[`Component: stories > Drag stories > Story TodoList 1`] = `
"<div>
  <div>
    <div contenteditable="true">
      <div>
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>&#10;</span>
      </div>
      <div>
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <div>
            <input type="checkbox" contenteditable="false">
            <span>
              <span>Design Phase</span>
            </span>
          </div>
        </span>
      </div>
      <div>
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <span>
            <input type="checkbox" contenteditable="false">
            <span>
              <span>Create wireframes</span>
            </span>
          </span>
        </span>
      </div>
      <div>
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <span>
            <input type="checkbox" checked="" contenteditable="false">
            <span>
              <span>Define color palette</span>
            </span>
          </span>
        </span>
      </div>
      <div>
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <span>
            <input type="checkbox" contenteditable="false">
            <span>
              <span>Design component library</span>
            </span>
          </span>
        </span>
      </div>
      <div>
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <div>
            <input type="checkbox" checked="" contenteditable="false">
            <span>
              <span>Research</span>
            </span>
          </div>
        </span>
      </div>
      <div>
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <span>
            <input type="checkbox" checked="" contenteditable="false">
            <span>
              <span>Analyze competitors</span>
            </span>
          </span>
        </span>
      </div>
      <div>
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <span>
            <input type="checkbox" checked="" contenteditable="false">
            <span>
              <span>User interviews</span>
            </span>
          </span>
        </span>
      </div>
      <div>
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <span>
            <input type="checkbox" checked="" contenteditable="false">
            <span>
              <span>Draft interview questions</span>
            </span>
          </span>
        </span>
      </div>
      <div>
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <span>
            <input type="checkbox" checked="" contenteditable="false">
            <span>
              <span>Schedule 5 sessions</span>
            </span>
          </span>
        </span>
      </div>
      <div>
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <div>
            <input type="checkbox" contenteditable="false">
            <span>
              <span>Development</span>
            </span>
          </div>
        </span>
      </div>
      <div>
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <span>
            <input type="checkbox" contenteditable="false">
            <span>
              <span>Set up CI/CD pipeline</span>
            </span>
          </span>
        </span>
      </div>
      <div>
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <span>
            <input type="checkbox" checked="" contenteditable="false">
            <span>
              <span>Write unit tests</span>
            </span>
          </span>
        </span>
      </div>
      <div>
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <span>
            <input type="checkbox" contenteditable="false">
            <span>
              <span>API integration</span>
            </span>
          </span>
        </span>
      </div>
      <div>
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <span>
            <input type="checkbox" contenteditable="false">
            <span>
              <span>Auth endpoints</span>
            </span>
          </span>
        </span>
      </div>
      <div>
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <span>
            <input type="checkbox" contenteditable="false">
            <span>
              <span>Data sync</span>
            </span>
          </span>
        </span>
      </div>
      <div>
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <div>
            <input type="checkbox" contenteditable="false">
            <span>
              <span>Launch</span>
            </span>
          </div>
        </span>
      </div>
      <div>
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <span>
            <input type="checkbox" contenteditable="false">
            <span>
              <span>Final QA pass</span>
            </span>
          </span>
        </span>
      </div>
      <div>
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <span>
            <input type="checkbox" contenteditable="false">
            <span>
              <span>Deploy to production</span>
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>
  <div>
    <button>Copy</button>
    <div>
      <pre data-value="&#10;- [ ] Design Phase&#10;	- [ ] Create wireframes&#10;	- [x] Define color palette&#10;	- [ ] Design component library&#10;- [x] Research&#10;	- [x] Analyze competitors&#10;	- [x] User interviews&#10;	- [x] Draft interview questions&#10;	- [x] Schedule 5 sessions&#10;- [ ] Development&#10;	- [ ] Set up CI/CD pipeline&#10;	- [x] Write unit tests&#10;	- [ ] API integration&#10;	- [ ] Auth endpoints&#10;	- [ ] Data sync&#10;- [ ] Launch&#10;	- [ ] Final QA pass&#10;	- [ ] Deploy to production&#10;">- [ ] Design Phase&#10;	- [ ] Create wireframes&#10;	- [x] Define color palette&#10;	- [ ] Design component library&#10;- [x] Research&#10;	- [x] Analyze competitors&#10;	- [x] User interviews&#10;	- [x] Draft interview questions&#10;	- [x] Schedule 5 sessions&#10;- [ ] Development&#10;	- [ ] Set up CI/CD pipeline&#10;	- [x] Write unit tests&#10;	- [ ] API integration&#10;	- [ ] Auth endpoints&#10;	- [ ] Data sync&#10;- [ ] Launch&#10;	- [ ] Final QA pass&#10;	- [ ] Deploy to production&#10;</pre>
    </div>
    <div>
      <span>Plain text</span>
      <span>89 words · 425 chars · 20 lines</span>
    </div>
  </div>
</div>"
`;

exports[`Component: stories > Dynamic stories > Story Dynamic 1`] = `
"<div contenteditable="true">
  <span>Hello, dynamical mark </span>
  <span contenteditable="false">
    <mark>world</mark>
  </span>
  <span>!</span>
</div>"
`;

exports[`Component: stories > Dynamic stories > Story Focusable 1`] = `
"<div>
  <div>
    <div contenteditable="true">
      <span>Hello, </span>
      <span contenteditable="false">
        <abbr title="By key operations">focusable</abbr>
      </span>
      <span> abbreviation </span>
      <span contenteditable="false">
        <abbr title="Hello! Hello!">world</abbr>
      </span>
      <span>!</span>
    </div>
  </div>
  <div>
    <button>Copy</button>
    <div>
      <pre data-value="Hello, @[focusable](By key operations) abbreviation @[world](Hello! Hello!)!">Hello, @[focusable](By key operations) abbreviation @[world](Hello! Hello!)!</pre>
    </div>
    <div>
      <span>Plain text</span>
      <span>7 words · 76 chars · 1 lines</span>
    </div>
  </div>
</div>"
`;

exports[`Component: stories > Dynamic stories > Story Removable 1`] = `
"<div contenteditable="true">
  <span>I </span>
  <span contenteditable="false">
    <mark>contain</mark>
  </span>
  <span> </span>
  <span contenteditable="false">
    <mark>removable</mark>
  </span>
  <span> by click </span>
  <span contenteditable="false">
    <mark>marks</mark>
  </span>
  <span>!</span>
</div>"
`;

exports[`Component: stories > Nested stories > Story ComplexHtmlDocument 1`] = `
"<div>
  <button>Preview</button>
  <button>Write</button>
</div>
<div contenteditable="false">
  <span></span>
  <span>
    <article>
      <span>
        <span>&#10;</span>
        <span>
          <header>
            <span>
              <span>&#10;</span>
              <span>
                <h1>
                  <span>
                    <span>Understanding </span>
                    <span>
                      <strong>
                        <span>
                          <span>Nested HTML</span>
                        </span>
                      </strong>
                    </span>
                    <span> Structures</span>
                  </span>
                </h1>
              </span>
              <span>&#10;</span>
              <span>
                <p>
                  <span>
                    <span></span>
                    <span>
                      <small>
                        <span>
                          <span>Published on </span>
                          <span>
                            <time>
                              <span>
                                <span>November 13, 2025</span>
                              </span>
                            </time>
                          </span>
                          <span></span>
                        </span>
                      </small>
                    </span>
                    <span></span>
                  </span>
                </p>
              </span>
              <span>&#10;</span>
            </span>
          </header>
        </span>
        <span>&#10;&#10;</span>
        <span>
          <section>
            <span>
              <span>&#10;</span>
              <span>
                <h2>
                  <span>
                    <span>Introduction</span>
                  </span>
                </h2>
              </span>
              <span>&#10;</span>
              <span>
                <p>
                  <span>
                    <span>This is a </span>
                    <span>
                      <em>
                        <span>
                          <span>comprehensive example</span>
                        </span>
                      </em>
                    </span>
                    <span> of </span>
                    <span>
                      <strong>
                        <span>
                          <span>nested HTML tags</span>
                        </span>
                      </strong>
                    </span>
                    <span> working together. The </span>
                    <span>
                      <code>
                        <span>
                          <span>MarkedInput</span>
                        </span>
                      </code>
                    </span>
                    <span> library can parse and render </span>
                    <span>
                      <mark>
                        <span>
                          <span>complex HTML structures</span>
                        </span>
                      </mark>
                    </span>
                    <span> with multiple levels of nesting.</span>
                  </span>
                </p>
              </span>
              <span>&#10;&#10;</span>
              <span>
                <blockquote>
                  <span>
                    <span>&#10;</span>
                    <span>
                      <p>
                        <span>
                          <span>HTML nesting allows us to create </span>
                          <span>
                            <strong>
                              <span>
                                <span>rich, semantic documents</span>
                              </span>
                            </strong>
                          </span>
                          <span> that are both </span>
                          <span>
                            <em>
                              <span>
                                <span>readable</span>
                              </span>
                            </em>
                          </span>
                          <span> and </span>
                          <span>
                            <u>
                              <span>
                                <span>well-structured</span>
                              </span>
                            </u>
                          </span>
                          <span>.</span>
                        </span>
                      </p>
                    </span>
                    <span>&#10;</span>
                  </span>
                </blockquote>
              </span>
              <span>&#10;</span>
            </span>
          </section>
        </span>
        <span>&#10;&#10;</span>
        <span>
          <section>
            <span>
              <span>&#10;</span>
              <span>
                <h2>
                  <span>
                    <span>Key Features</span>
                  </span>
                </h2>
              </span>
              <span>&#10;</span>
              <span>
                <ul>
                  <span>
                    <span>&#10;</span>
                    <span>
                      <li>
                        <span>
                          <span></span>
                          <span>
                            <strong>
                              <span>
                                <span>Bold text</span>
                              </span>
                            </strong>
                          </span>
                          <span> using </span>
                          <span>
                            <code>
                              <span>
                                <span>&amp;lt;strong&amp;gt;</span>
                              </span>
                            </code>
                          </span>
                          <span> or </span>
                          <span>
                            <code>
                              <span>
                                <span>&amp;lt;b&amp;gt;</span>
                              </span>
                            </code>
                          </span>
                          <span> tags</span>
                        </span>
                      </li>
                    </span>
                    <span>&#10;</span>
                    <span>
                      <li>
                        <span>
                          <span></span>
                          <span>
                            <em>
                              <span>
                                <span>Italic text</span>
                              </span>
                            </em>
                          </span>
                          <span> with </span>
                          <span>
                            <code>
                              <span>
                                <span>&amp;lt;em&amp;gt;</span>
                              </span>
                            </code>
                          </span>
                          <span> or </span>
                          <span>
                            <code>
                              <span>
                                <span>&amp;lt;i&amp;gt;</span>
                              </span>
                            </code>
                          </span>
                          <span> tags</span>
                        </span>
                      </li>
                    </span>
                    <span>&#10;</span>
                    <span>
                      <li>
                        <span>
                          <span></span>
                          <span>
                            <u>
                              <span>
                                <span>Underlined content</span>
                              </span>
                            </u>
                          </span>
                          <span> for emphasis</span>
                        </span>
                      </li>
                    </span>
                    <span>&#10;</span>
                    <span>
                      <li>
                        <span>
                          <span></span>
                          <span>
                            <mark>
                              <span>
                                <span>Highlighted text</span>
                              </span>
                            </mark>
                          </span>
                          <span> to draw attention</span>
                        </span>
                      </li>
                    </span>
                    <span>&#10;</span>
                    <span>
                      <li>
                        <span>
                          <span></span>
                          <span>
                            <del>
                              <span>
                                <span>Strikethrough</span>
                              </span>
                            </del>
                          </span>
                          <span> for deleted content</span>
                        </span>
                      </li>
                    </span>
                    <span>&#10;</span>
                    <span>
                      <li>
                        <span>
                          <span></span>
                          <span>
                            <code>
                              <span>
                                <span>Inline code</span>
                              </span>
                            </code>
                          </span>
                          <span> snippets</span>
                        </span>
                      </li>
                    </span>
                    <span>&#10;</span>
                  </span>
                </ul>
              </span>
              <span>&#10;</span>
            </span>
          </section>
        </span>
        <span>&#10;&#10;</span>
        <span>
          <section>
            <span>
              <span>&#10;</span>
              <span>
                <h2>
                  <span>
                    <span>Advanced Examples</span>
                  </span>
                </h2>
              </span>
              <span>&#10;</span>
              <span>
                <h3>
                  <span>
                    <span>Mathematical Notation</span>
                  </span>
                </h3>
              </span>
              <span>&#10;</span>
              <span>
                <p>
                  <span>
                    <span>The formula for water is H</span>
                    <span>
                      <sub>
                        <span>
                          <span>2</span>
                        </span>
                      </sub>
                    </span>
                    <span>O, and Einstein's famous equation is E=mc</span>
                    <span>
                      <sup>
                        <span>
                          <span>2</span>
                        </span>
                      </sup>
                    </span>
                    <span>.</span>
                  </span>
                </p>
              </span>
              <span>&#10;&#10;</span>
              <span>
                <h3>
                  <span>
                    <span>Code Blocks</span>
                  </span>
                </h3>
              </span>
              <span>&#10;</span>
              <span>
                <pre>
                  <span>
                    <span></span>
                    <span>
                      <code>
                        <span>
                          <span>function parseHTML(input) {&#10;  return parser.parse(input);&#10;}</span>
                        </span>
                      </code>
                    </span>
                    <span></span>
                  </span>
                </pre>
              </span>
              <span>&#10;&#10;</span>
              <span>
                <h3>
                  <span>
                    <span>Nested Lists</span>
                  </span>
                </h3>
              </span>
              <span>&#10;</span>
              <span>
                <ol>
                  <span>
                    <span>&#10;</span>
                    <span>
                      <li>
                        <span>
                          <span>First level item&#10;</span>
                          <span>
                            <ul>
                              <span>
                                <span>&#10;</span>
                                <span>
                                  <li>
                                    <span>
                                      <span>Second level </span>
                                      <span>
                                        <strong>
                                          <span>
                                            <span>nested</span>
                                          </span>
                                        </strong>
                                      </span>
                                      <span> item</span>
                                    </span>
                                  </li>
                                </span>
                                <span>&#10;</span>
                                <span>
                                  <li>
                                    <span>
                                      <span>Another nested item with </span>
                                      <span>
                                        <em>
                                          <span>
                                            <span>emphasis</span>
                                          </span>
                                        </em>
                                      </span>
                                      <span></span>
                                    </span>
                                  </li>
                                </span>
                                <span>&#10;</span>
                              </span>
                            </ul>
                          </span>
                          <span>&#10;</span>
                        </span>
                      </li>
                    </span>
                    <span>&#10;</span>
                    <span>
                      <li>
                        <span>
                          <span>Another first level item</span>
                        </span>
                      </li>
                    </span>
                    <span>&#10;</span>
                  </span>
                </ol>
              </span>
              <span>&#10;</span>
            </span>
          </section>
        </span>
        <span>&#10;&#10;</span>
        <span>
          <section>
            <span>
              <span>&#10;</span>
              <span>
                <h2>
                  <span>
                    <span>Complex Nesting</span>
                  </span>
                </h2>
              </span>
              <span>&#10;</span>
              <span>
                <div>
                  <span>
                    <span>&#10;</span>
                    <span>
                      <p>
                        <span>
                          <span>Here's a </span>
                          <span>
                            <strong>
                              <span>
                                <span>complex example</span>
                              </span>
                            </strong>
                          </span>
                          <span> with </span>
                          <span>
                            <em>
                              <span>
                                <span>multiple </span>
                                <span>
                                  <u>
                                    <span>
                                      <span>nested </span>
                                      <span>
                                        <mark>
                                          <span>
                                            <span>tags</span>
                                          </span>
                                        </mark>
                                      </span>
                                      <span></span>
                                    </span>
                                  </u>
                                </span>
                                <span> inside</span>
                              </span>
                            </em>
                          </span>
                          <span> each other.</span>
                        </span>
                      </p>
                    </span>
                    <span>&#10;</span>
                    <span>
                      <p>
                        <span>
                          <span>You can even have </span>
                          <span>
                            <code>
                              <span>
                                <span>code with </span>
                                <span>
                                  <strong>
                                    <span>
                                      <span>bold</span>
                                    </span>
                                  </strong>
                                </span>
                                <span> inside</span>
                              </span>
                            </code>
                          </span>
                          <span> or </span>
                          <span>
                            <mark>
                              <span>
                                <span>highlighted </span>
                                <span>
                                  <em>
                                    <span>
                                      <span>italic </span>
                                      <span>
                                        <u>
                                          <span>
                                            <span>underlined</span>
                                          </span>
                                        </u>
                                      </span>
                                      <span></span>
                                    </span>
                                  </em>
                                </span>
                                <span> text</span>
                              </span>
                            </mark>
                          </span>
                          <span>.</span>
                        </span>
                      </p>
                    </span>
                    <span>&#10;</span>
                  </span>
                </div>
              </span>
              <span>&#10;</span>
            </span>
          </section>
        </span>
        <span>&#10;&#10;</span>
        <span>
          <footer>
            <span>
              <span>&#10;</span>
              <span>
                <p>
                  <span>
                    <span></span>
                    <span>
                      <small>
                        <span>
                          <span>© 2025 MarkedInput Library. Built with </span>
                          <span>
                            <strong>
                              <span>
                                <span>React</span>
                              </span>
                            </strong>
                          </span>
                          <span> and </span>
                          <span>
                            <em>
                              <span>
                                <span>TypeScript</span>
                              </span>
                            </em>
                          </span>
                          <span>.</span>
                        </span>
                      </small>
                    </span>
                    <span></span>
                  </span>
                </p>
              </span>
              <span>&#10;</span>
            </span>
          </footer>
        </span>
        <span>&#10;</span>
      </span>
    </article>
  </span>
  <span></span>
</div>"
`;

exports[`Component: stories > Nested stories > Story ComplexMarkdown 1`] = `
"<div>
  <button>Preview</button>
  <button>Write</button>
</div>
<div contenteditable="false">
  <span></span>
  <span>
    <span>
      <span>
        <span>Welcome to </span>
        <span>
          <span>
            <span>
              <span>Marked Input</span>
            </span>
          </span>
        </span>
        <span></span>
      </span>
    </span>
  </span>
  <span>This is a </span>
  <span>
    <span>
      <span>
        <span>powerful</span>
      </span>
    </span>
  </span>
  <span> library for parsing </span>
  <span>
    <span>
      <span>
        <span>rich text</span>
      </span>
    </span>
  </span>
  <span> with </span>
  <span>
    <span>
      <span>
        <span>markdown</span>
      </span>
    </span>
  </span>
  <span> formatting.&#10;You can use </span>
  <span contenteditable="false">
    <span>inline code</span>
  </span>
  <span> snippets like </span>
  <span contenteditable="false">
    <span>const parser = new ParserV2()</span>
  </span>
  <span> in your text.&#10;&#10;</span>
  <span>
    <span>
      <span>
        <span>Features</span>
      </span>
    </span>
  </span>
  <span>- </span>
  <span>
    <span>
      <span>
        <span>Bold text</span>
      </span>
    </span>
  </span>
  <span> with </span>
  <span>
    <span>
      <span>
        <span>strong emphasis</span>
      </span>
    </span>
  </span>
  <span>&#10;- </span>
  <span>
    <span>
      <span>
        <span>Italic text</span>
      </span>
    </span>
  </span>
  <span> and </span>
  <span>
    <span>
      <span>
        <span>emphasis</span>
      </span>
    </span>
  </span>
  <span> support&#10;</span>
  <span>
    <span>
      <span>
        <span></span>
        <span contenteditable="false">
          <span>Code snippets</span>
        </span>
        <span> and </span>
        <span contenteditable="false">
          <span>code blocks</span>
        </span>
        <span>&#10;</span>
        <span>
          <span>
            <span>
              <span></span>
              <span contenteditable="false">
                <span>Strikethrough</span>
              </span>
              <span> for deleted content&#10;</span>
              <span>
                <span>
                  <span>
                    <span>Links like </span>
                    <span contenteditable="false">
                      <span>GitHub</span>
                    </span>
                    <span></span>
                  </span>
                </span>
              </span>
              <span></span>
              <span>
                <span>
                  <span>
                    <span>Example</span>
                  </span>
                </span>
              </span>
              <span>Here's how to use it:</span>
            </span>
          </span>
        </span>
        <span></span>
        <span contenteditable="false">
          <span>const parser = new ParserV2(['**__value__**', '*__value__*'])&#10;const result = parser.parse('Hello **world**!')&#10;</span>
        </span>
        <span></span>
      </span>
    </span>
  </span>
  <span>Visit our </span>
  <span contenteditable="false">
    <span>documentation</span>
  </span>
  <span> for more details.&#10;</span>
  <span contenteditable="false">
    <span>This feature is deprecated</span>
  </span>
  <span> and will be removed in v3.0.</span>
</div>"
`;

exports[`Component: stories > Nested stories > Story HtmlLikeTags 1`] = `
"<div>
  <div>
    <div contenteditable="true">
      <span></span>
      <span>
        <div>
          <span>
            <span>This is a div with </span>
            <span>
              <mark>
                <span>
                  <span>a mark inside</span>
                </span>
              </mark>
            </span>
            <span> and </span>
            <span>
              <b>
                <span>
                  <span>bold text with </span>
                  <span>
                    <del>
                      <span>
                        <span>nested del</span>
                      </span>
                    </del>
                  </span>
                  <span></span>
                </span>
              </b>
            </span>
            <span></span>
          </span>
        </div>
      </span>
      <span></span>
    </div>
  </div>
  <div>
    <button>Copy</button>
    <div>
      <pre data-value="&lt;div&gt;This is a div with &lt;mark&gt;a mark inside&lt;/mark&gt; and &lt;b&gt;bold text with &lt;del&gt;nested del&lt;/del&gt;&lt;/b&gt;&lt;/div&gt;">&lt;div&gt;This is a div with &lt;mark&gt;a mark inside&lt;/mark&gt; and &lt;b&gt;bold text with &lt;del&gt;nested del&lt;/del&gt;&lt;/b&gt;&lt;/div&gt;</pre>
    </div>
    <div>
      <span>Plain text</span>
      <span>14 words · 104 chars · 1 lines</span>
    </div>
  </div>
</div>"
`;

exports[`Component: stories > Nested stories > Story InteractiveNested 1`] = `
"<div contenteditable="true">
  <span></span>
  <span>
    <span role="button" tabindex="0" title="Depth: 0, Nested: true">
      <span>
        <span>Click me </span>
        <span>
          <span role="button" tabindex="0" title="Depth: 1, Nested: true">
            <span>
              <span>or me </span>
              <span>
                <span role="button" tabindex="0" title="Depth: 2, Nested: false">
                  <span>
                    <span>or even me</span>
                  </span>
                </span>
              </span>
              <span></span>
            </span>
          </span>
        </span>
        <span></span>
      </span>
    </span>
  </span>
  <span></span>
</div>"
`;

exports[`Component: stories > Nested stories > Story MultipleLevels 1`] = `
"<div>
  <div>
    <div contenteditable="true">
      <span>Check </span>
      <span>
        <span>
          <span>
            <span>this tag with </span>
            <span>
              <span>
                <span>
                  <span>nested mention with </span>
                  <span>
                    <span>
                      <span>
                        <span>code</span>
                      </span>
                    </span>
                  </span>
                  <span></span>
                </span>
              </span>
            </span>
            <span></span>
          </span>
        </span>
      </span>
      <span> and </span>
      <span>
        <span>
          <span>
            <span>another </span>
            <span>
              <span>
                <span>
                  <span>deeply nested</span>
                </span>
              </span>
            </span>
            <span> tag</span>
          </span>
        </span>
      </span>
      <span></span>
    </div>
  </div>
  <div>
    <button>Copy</button>
    <div>
      <pre data-value="Check #[this tag with @[nested mention with \`code\`]] and #[another #[deeply nested] tag]">Check #[this tag with @[nested mention with \`code\`]] and #[another #[deeply nested] tag]</pre>
    </div>
    <div>
      <span>Plain text</span>
      <span>13 words · 88 chars · 1 lines</span>
    </div>
  </div>
</div>"
`;

exports[`Component: stories > Nested stories > Story SimpleNesting 1`] = `
"<div>
  <div>
    <div contenteditable="true">
      <span>This is </span>
      <span>
        <span>
          <span>
            <span>italic text with </span>
            <span>
              <span>
                <span>
                  <span>bold</span>
                </span>
              </span>
            </span>
            <span> inside</span>
          </span>
        </span>
      </span>
      <span> and more text.</span>
    </div>
  </div>
  <div>
    <button>Copy</button>
    <div>
      <pre data-value="This is *italic text with **bold** inside* and more text.">This is *italic text with **bold** inside* and more text.</pre>
    </div>
    <div>
      <span>Plain text</span>
      <span>10 words · 57 chars · 1 lines</span>
    </div>
  </div>
</div>"
`;

exports[`Component: stories > Overlay stories > Story CustomOverlay 1`] = `
"<div contenteditable="true">
  <span>Hello, custom overlay by trigger @!</span>
</div>"
`;

exports[`Component: stories > Overlay stories > Story CustomTrigger 1`] = `
"<div contenteditable="true">
  <span>Hello, custom overlay by trigger /!</span>
</div>"
`;

exports[`Component: stories > Overlay stories > Story DefaultOverlay 1`] = `
"<div contenteditable="true">
  <span>Hello, default - suggestion overlay by trigger @!</span>
</div>"
`;

exports[`Component: stories > Overlay stories > Story PositionedOverlay 1`] = `
"<div contenteditable="true">
  <span>Hello, positioned overlay by trigger @!</span>
</div>"
`;

exports[`Component: stories > Overlay stories > Story SelectableOverlay 1`] = `
"<div contenteditable="true">
  <span>Hello, suggest overlay by trigger @!</span>
</div>"
`;

exports[`Component: stories > Slots stories > Story CustomComponents 1`] = `
"<div contenteditable="true">
  <span>Both @[container] and @[span] are @[customized]</span>
</div>"
`;

exports[`Component: stories > Slots stories > Story DataAttributes 1`] = `
"<div data-test-id="marked-input-demo" data-module="slots-api" data-user-id="user-123" contenteditable="true">
  <span>Use @[data] attributes for testing and tracking</span>
</div>"
`;

exports[`Component: stories > Slots stories > Story StyleMerging 1`] = `
"<div contenteditable="true">
  <span>Container has @[merged] styles from multiple sources</span>
</div>"
`;

exports[`Component: stories > Slots stories > Story WithSlotProps 1`] = `
"<h3>Styling &amp; Events via slotProps</h3>
<p>Customize styling and add custom event handlers without replacing components:</p>
<div contenteditable="true">
  <span>Try pressing @[Enter] or clicking</span>
</div>
<div>
  <strong>Recent events:</strong>
  <p>No events yet</p>
</div>"
`;
